Ensured that if you're on mobile, the content is not centred. The bars on mobile browsers are inconsistent and make for strange viewport heights

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -120,8 +120,25 @@ strong {
 p *:last-child {
   margin-bottom: 0;
 }
+
+.template {
+  margin: 0 auto;
+  max-width: 960;
+  padding: 0px 1.0875rem 0px;
+  padding-top: 0;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
+  } 
+
+  .template {
+    align-items: flex-start;
+    padding-top: 2rem;
   }
 }
